...
                }
            }
        }
    }

    Column(
      modifier = Modifier.fillMaxWidth().verticalScroll(rememberScrollState()).testTag("SettingsScreenScrollable"),
      horizontalAlignment = Alignment.Start,
      verticalArrangement = Arrangement.SpaceEvenly
    ) {
        Column(
          modifier = Modifier.fillMaxWidth().padding(15.dp, 2.dp),
          horizontalAlignment = Alignment.Start
...
            )

            Spacer(Modifier.height(16.dp))
            CenteredSectionText(i18n(S.GeneralSettings))

            WallyDivider()
            ShowScreenNavSwitch(SHOW_IDENTITY_PREF, NavChoice(ScreenId.Identity, S.title_activity_identity, Icons.Default.Person), S.enableIdentityMenu, showIdentityPref, "IdentitySwitch")
            ShowScreenNavSwitch(SHOW_TRICKLE_PAY_PREF, NavChoice(ScreenId.TricklePayRegistrations, S.Services, Icons.Default.Cloud), S.EnableServices, showTricklePayPref, "ServicesSwitch")
            // Only let them choose to not show assets if they don't have any assets; null = not counted yet.
            val app = wallyApp
            val hasAssets = if (app != null) app.hasAssetsState.collectAsState().value else null
            if (showAssetsPref.collectAsState().value == false || hasAssets == false)
                ShowScreenNavSwitch(SHOW_ASSETS_PREF, NavChoice(ScreenId.Assets, S.title_activity_assets, Icons.Default.Image), S.enableAssetsMenu, showAssetsPref, "AssetsSwitch")
            generalSettingsSwitches.forEach { GeneralSettingsSwitchView(it) }
...
