...
data class MeditationUiState(
  val sound: Boolean = true,
  val intervalSound: Boolean = true,
  val strings: MeditationDrawerStrings = MeditationDrawerStrings(
    meditate = "Meditate",
    interval = "1 min interval sound",
    settings = "Settings",
    version = "Version: 1.0.3 (build 156)",
    start = "Start",
    meditation = "meditation",
    meditating = "Meditating...",
    mediationComplete = "Meditation complete!",
    okay = "Okay",
...
